--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Integrated Test</title>
 </head>
 <body>
-    <script type="module" src="tests/integrated.js"></script>
+    <script type="module" src="tests/integrated_test.js"></script>
 </body>
 </html>
