--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Integrated Test</title>
 </head>
 <body>
-    <scrpit type="module" src="src/keywords/struct.test.js"></script>
+    <script type="module" src="src/keywords/struct.test.js"></script>
     <script type="module" src="tests/integrated-test.test.js"></script>
 </body>
 </html>
