--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Integrated Test</title>
 </head>
+
 <body>
     <!-- <script type="module" src="src/web-api/indexed-db.test.js"></script> -->
     <script type="module" src="src/keywords/struct.test.js"></script>
-    <script type="module" src="tests/integrated-test.test.js"></script>
+    <!-- <script type="module" src="tests/integrated-test.test.js"></script> -->
 </body>
+
 </html>
